--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,17 @@
-web:
-  build: .
-  command: python manage.py runserver 0.0.0.0:8000
-  volumes:
-    - .:/code
-  ports:
-    - "8000:8000"
+version: "2"
+services:
+  db:
+    image: postgres:9.5
+  web:
+    image: ervilis/speackerfight
+    command: gunicorn --workers=2 speakerfight.wsgi -b 0.0.0.0:8000
+    ports:
+      - "80:8000"
+    environment:
+      DB_HOST: db
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: postgres
+      DB_PORT: 5432
+    depends_on:
+      - db
